/**
  * The persisted hashes.
  * Version : 2
  * All string are encoded in UTF-8.
  */

syntax = "proto3";

import "common.proto";

package Protos.FileCache;

// All the hashes for a set of file.
message Hashes {
   message Chunk {
      uint32 known_bytes = 1; // Used only when downloading a file, we have the hash but we don't have all the file content.
      Common.Hash hash = 2; //
   }

   message File {
      string filename = 1;
      uint64 size = 2;
      uint64 date_last_modified = 3; // In ms since Epoch.
      repeated Chunk chunk = 4; // Contains all the file chunk, if we don't have a chunk its hash is ommited.
   }

   message SharedDir {
      Common.Hash id = 1;
      string path = 2; // Always ended with a '/'.
      Dir root = 3;
   }

   message Dir {
      string name = 1; // Empty for the roots.
      repeated File file = 2; // Contains only the files which have at least one hash known.
      repeated Dir dir = 3;
   }

   uint32 version = 1;
   uint32 chunkSize = 2;

   repeated SharedDir sharedDir = 3;
}
